Fix bug causing screen to flicker when moving blur slider

--- a/03 - CSS Variables/styles.css
+++ b/03 - CSS Variables/styles.css
@@ -11,7 +11,7 @@ img {
 	padding: var(--spacing);
 	background: var(--base);
 	filter: blur(var(--blur));
-	width: 50%;
+	max-width: 900px;
 	height: auto;
 }
 
